--- a/lib/App/App.hpp.sample
+++ b/lib/App/App.hpp.sample
@@ -1,6 +1,8 @@
 #ifndef __APP_HPP__
 #define __APP_HPP__
 
+#undef DEBUG
+
 #define WIFI_SSID "<your wifi ssid>"
 #define WIFI_PASS "<your wifi password>"
 
